2006-01-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/error.c, ext/oci8/oci8.c,
	    ext/oci8/ocidatetime.c, ext/oci8/oradate.c,
	    ext/oci8/oranumber.c, ext/oci8/param.c, ext/oci8/rowid.c,
	    ext/oci8/stmt.c: fix indentation.
	* .cvsignore, ext/oci8/.cvsignore: added.

2005-10-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c, ext/oci8/oci8.c, ext/oci8/svcctx.c, ext/oci8/extconf.rb:
	    oci8.c is renamed to oci8lib.c.
	    svcctx.c is renamed to oci8.c.

2005-10-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocidatetime.c: fix to bind OCIDateTime.
	* ext/oci8/oraconf.rb: add -R to linker on Solaris and Linux.
	  http://rubyforge.org/tracker/index.php?func=detail&aid=2148&group_id=256&atid=1051
	* ext/oci8/svcctx.c: change a setter name. __non_blocking= doesn't work. use 
	  __set_non_blocking instead.
	* lib/oci8.rb.in: add ruby's Datetime support.
	* lib/ocidatetime.rb: add a ruby's Datetime support file.
	* test/test_all.rb: fix 
	* test/test_break.rb: add two assesion to check a non_blocking status.
	* test/test_dbi.rb, test/test_oci8.rb: testcases for DateTime.
	* test/test_oradate.rb: delete an unsuccessfull testcase, which depends on libc implementation.

2005-07-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c, ext/oci8/oci8.c, ext/oci8/oci8.h, lib/oci8.rb.in:
	  delete OCILobLocator. implement OCI8::LOB by C instead of ruby.
	* ext/oci8/svcctx.c: add more check in oci8_get_svcctx().

2005-07-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/lob.c, ext/oci8/oci8.h, ext/oci8/ocidatetime.c,
	  ext/oci8/ocinumber.c, ext/oci8/oradate.c, ext/oci8/oranumber.c,
	  ext/oci8/rowid.c, ext/oci8/stmt.c, ext/oci8/svcctx.c:
	  change arguments of (oci8_bind_class_t *)->init(). change the return
	  value of oci8_get_svcctx(). add oci8_get_oci_session().
	* lib/oci8.rb.in: change arguments of OCI8::BindType:Base.new().

2005-07-16  KUBO Takehiro  <kubo@jiubao.org>